@startuml
'https://plantuml.com/class-diagram
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam dpi 300
skinparam activity  {
    DiamondFontSize 14
    ArrowFontSize 14
    FontSize 14
}
package application {
    class ServerAuthenticationAppService {
        - ServerInfoService serverInfoService
        - TokenCredentialService tokenCredentialService
        - ServerCredentialAuthConfig serverCredentialAuthConfig
        - ServerTokenCredential createServerCredential(ServerAuthCommand)
        - ServerTokenCredential verifyAndGetToken(String token)
    }
    class ConnectorAuthenticationAppService {
        - ConnectorCredentialAuthConfig credentialCacheConfig
        - TokenCredentialService tokenCredentialService
        - ConnectorCredentialAuthConfig config
        + ConnectorCredential create(Long appId, Long connectorId)
        +  ConnectorCredential verifyAndGet(Long appId, Long connectorId, String token)
    }
}


package domain {
    class TokenCredentialService<T extends TokenCredential> {
        - ITokenHandler tokenHandler
        + completeAndSave(TokenCredential, TokenCredentialSpec)
        + T verifyAndGet(String token, Class<T> credentialType)
        + T verifyAndInvalidateToken(String token, Class<T> credentialType)
        + T invalidateToken(String token, Class<T> credentialType)
    }
}

package infrastructure {
    class ConnectorCredentialAuthConfig {
        - Long expireMs
        - String tokenTopic
    }
    class ServerCredentialAuthConfig {
        - Long expireMs
        - String tokenTopic
    }
    interface ITokenHandler {
        void saveToken(TokenCredential credential)
        TokenCredential getToken(String token)
        TokenCredential getAndDeleteToken(String token)
        TokenCredential deleteToken(String token)
    }
    class RedisTokenHandlerImpl implements ITokenHandler {
        - RedisTemplate<String, TokenCredential> redisTemplate
        ---
        实现接口方法
    }
    class RedisTemplate
}
ServerAuthenticationAppService -> ServerCredentialAuthConfig: 缓存配置
ServerAuthenticationAppService -> TokenCredentialService: token生成与校验
ConnectorAuthenticationAppService --> ConnectorCredentialAuthConfig: 缓存配置
ConnectorAuthenticationAppService --> TokenCredentialService: token生成与校验
TokenCredentialService --> ITokenHandler: Token存取
RedisTokenHandlerImpl -> RedisTemplate: Redis操作
@enduml